feat(world): offer torus before cylinder and foreign shapes last